# rust-sdk

./: .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  zizmor.yml
.github/workflows/: build.yml  lint.yml  publish-crates-dry-run-wasm32.yml  publish-crates-dry-run.yml  publish-crates-release.yml
crates/rust-client/: Cargo.toml  build.rs
crates/rust-client/src/: builder.rs  errors.rs  lib.rs  utils.rs
crates/rust-client/src/account/: account_reader.rs  mod.rs
crates/rust-client/src/grpc_support/: mod.rs
crates/rust-client/src/note/: import.rs  mod.rs  note_screener.rs  note_update_tracker.rs
crates/rust-client/src/note_transport/: errors.rs  grpc.rs  mod.rs
crates/rust-client/src/pswap/: discovery.rs  errors.rs  lineage.rs  mod.rs  observer.rs  store.rs
crates/rust-client/src/remote_prover/: api_client.rs  generated.rs  mod.rs  tx_prover.rs
crates/rust-client/src/rpc/: endpoint.rs  mod.rs  verifying_client.rs
crates/rust-client/src/rpc/domain/: account_vault.rs  block.rs  note.rs  storage_map.rs  transaction.rs
crates/rust-client/src/rpc/errors/: mod.rs
crates/rust-client/src/rpc/errors/node/: transaction.rs
crates/rust-client/src/rpc/tonic_client/: api_client.rs  mod.rs
crates/rust-client/src/store/: errors.rs  forest_backend.rs  mod.rs  smt_forest.rs
crates/rust-client/src/store/data_store/: cache.rs  mod.rs
crates/rust-client/src/store/note_record/input_note_record/: mod.rs
crates/rust-client/src/store/note_record/input_note_record/states/: committed.rs  consumed_external.rs  consumed_external_erased.rs  expected.rs  invalid.rs  mod.rs  processing_authenticated.rs  processing_unauthenticated.rs  unverified.rs
crates/rust-client/src/store/note_record/output_note_record/: mod.rs
crates/rust-client/src/sync/: block_header.rs  mod.rs  note_observer.rs  state_sync.rs  state_sync_update.rs
crates/rust-client/src/test_utils/: common.rs  mock.rs  note_transport.rs
crates/rust-client/src/transaction/: dap_executor.rs  debug_executor.rs  mod.rs  observer.rs  prover.rs  result.rs
crates/rust-client/src/transaction/batch/: data_store.rs  mod.rs
crates/rust-client/src/transaction/request/: builder.rs  mod.rs  note_script_policy.rs
crates/sqlite-store/examples/: forest_bench.rs  heavy_bench.rs  mem_bench.rs  rollback_bench.rs
crates/sqlite-store/src/: chain_data.rs  forest.rs  lib.rs  store.sql  sync.rs  transaction.rs
crates/sqlite-store/src/account/: accounts.rs  helpers.rs  mod.rs  storage.rs  tests.rs  vault.rs
crates/sqlite-store/src/db_management/: errors.rs  migration_tests.rs  mod.rs  pool_manager.rs  utils.rs
crates/sqlite-store/src/migrations/: 0002_input_notes_script_root_index.sql  0002_prune_output_note_tags.sql
crates/sqlite-store/src/note/: filters.rs  mod.rs  tests.rs
crates/testing/miden-client-tests/src/: tests.rs
crates/testing/miden-client-tests/src/tests/: batch.rs  store.rs  transaction.rs  transport.rs
crates/testing/test-node-genesis/: Cargo.toml
crates/testing/test-node-genesis/src/: agglayer.rs  lib.rs
scripts/: start-test-node.sh
