[workspace]
resolver = "2"

members = [
  "bin/integration-tests",
  "bin/miden-bench",
  "bin/miden-cli",
  "crates/rust-client",
  "crates/sqlite-store",
  "crates/testing/miden-client-tests",
  "crates/testing/test-node-genesis",
]

default-members = ["bin/miden-cli", "crates/rust-client"]

[workspace.metadata.inheritance-check]
ignore = [
  # rust-client's wasm32 target needs a sync-only tokio and can't inherit the workspace's rt-multi-thread features.
  { dependency = "tokio", member = "crates/rust-client" },
]

[workspace.package]
authors      = ["miden contributors"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/0xMiden/rust-sdk"
rust-version = "1.96"
version      = "0.16.0-alpha.1"

[profile.dev]
codegen-units = 16

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[workspace.dependencies]
# Workspace crates
miden-client              = { default-features = false, path = "crates/rust-client", version = "0.16.0-alpha.1" }
miden-client-sqlite-store = { default-features = false, path = "crates/sqlite-store", version = "0.16.0-alpha.1" }

# Miden protocol dependencies
miden-agglayer  = { default-features = false, version = "0.16.0-alpha.4" }
miden-protocol  = { default-features = false, version = "0.16.0-alpha.4" }
miden-standards = { default-features = false, version = "0.16.0-alpha.4" }
miden-testing   = { default-features = false, version = "0.16.0-alpha.2" }
miden-tx        = { default-features = false, version = "0.16.0-alpha.4" }
miden-tx-batch  = { default-features = false, version = "0.16.0-alpha.4" }

# Miden node dependencies
miden-node-proto-build           = { default-features = false, version = "0.16.0-alpha.2" }
miden-note-transport-proto-build = { default-features = false, version = "0.5.0-alpha.1" }

# Miden debug dependency
miden-debug     = { default-features = false, features = ["dap", "std"], version = "0.9" }
miden-processor = { default-features = false, version = "0.25" }

# External dependencies
anyhow             = { default-features = false, version = "1.0" }
assert_cmd         = { version = "2.0" }
async-trait        = { version = "0.1" }
chrono             = { version = "0.4" }
clap               = { version = "4.5" }
comfy-table        = { version = "7.1" }
hex                = { version = "0.4" }
miette             = { features = ["fancy"], version = "7.6" }
predicates         = { version = "3.0" }
prost              = { default-features = false, version = "0.14" }
rand               = { version = "0.10" }
rand_chacha        = { version = "0.10" }
regex              = { version = "1.0" }
rstest             = { version = "0.25" }
serde              = { features = ["derive"], version = "1.0" }
serde_json         = { version = "1.0" }
tempfile           = { version = "3.0" }
thiserror          = { default-features = false, version = "2.0" }
tokio              = { features = ["macros", "rt-multi-thread"], version = "1.48" }
tonic              = { default-features = false, version = "0.14" }
tracing            = { version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }
uuid               = { version = "1.10" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
# cast_possible_truncation =   "allow"  # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
